--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -9,15 +9,15 @@
   {{#unless eaten}}
     {{> burgers/burger-block eaten=true}}
     {{/unless}}
-  {{/each}}
+{{/each}}
 </ul>
 <h2>Burgers eaten:</h2>
 
 <ul>
 {{#each burgers}}
-{{#if eaten}}
-{{> burgers/burger-block eaten=false}}
-{{/if}}
+  {{#if eaten}}
+    {{> burgers/burger-block eaten=false}}
+  {{/if}}
 {{/each}}
 </ul>
 <h2>Create a Burger</h2>
@@ -29,12 +29,7 @@
   </div>
 
   <div class="form-group">
-    <label for="ingredients">ingredients:</label>
-    <input type="text" id="ingredients" name="ingredients">
-  </div>
-
-  <div class="form-group">
-    <label for="eaten">Eat?</label><br>
+    <label for="eaten">Eat now or save?</label><br>
     <input type="radio" name="eaten" value="1" checked> Eat!<br>
     <input type="radio" name="eaten" value="0"> Save for later
   </div>
