--- a/views/partials/burgers/burger-block.handlebars
+++ b/views/partials/burgers/burger-block.handlebars
@@ -1,9 +1,9 @@
 <li>
 	{{name}}
 
-	<button class="change-eaten" data-id="{{id}}" data-neweaten="{{eaten}}">
+	<button class=" btn change-eaten" data-id="{{id}}" data-neweaten="{{eaten}}">
 		{{#if eaten}}Eat!{{else}}Save for later{{/if}}
 	</button>
 
-	<button class="delete-burger" data-id="{{this.id}}">DELETE!</button>
+	<button class="btn delete-burger" data-id="{{this.id}}">DELETE!</button>
 </li>
