--- a/public/assets/css/burger_style.css
+++ b/public/assets/css/burger_style.css
@@ -1,3 +1,81 @@
-*{
-    background-color: lavender;
+.page-container{
+    background-image: url(../images/background.jpg);
+    background-repeat: repeat;
+}
+
+.title{
+    background: rgba(187, 187, 187, 0.6);
+    padding: 10px;
+    border-radius: 25px;
+    font-size: 36px;
+    text-align: center;
+    text-shadow: 4px 4px rgba(162, 162, 162);
+}
+
+h2{
+    font-family: 'Black Han Sans', sans-serif;
+}
+.logo {
+    height: 275px;
+    width: 300px;
+}
+.icon {
+    height: 75px;
+    width: 100px;
+}
+
+.items {
+    font-family: 'Black Han Sans', sans-serif;
+}
+
+.form-group{
+    font-family: 'Black Han Sans', sans-serif;
+}
+
+.btn{
+    font-family: 'Sigmar One', cursive;
+    background: rgba(187, 187, 187, 0.6);
+    border-radius: 25px;
+}
+
+.burger-input{
+    
+        width: 200;
+        height: 55px;
+        padding: 12px 20px;
+        box-sizing: border-box;
+        border: 2px solid #ccc;
+        border-radius: 4px;
+        background-color: #f8f8f8;
+        font-size: 16px;
+        resize: none;
+      
+}
+
+.menu-container {
+    display: grid;
+    background: rgba(187, 187, 187, 0.6);
+    padding: 10px;
+    border-radius: 25px;
+    grid-template-columns: auto auto auto auto;
+    grid-gap: 10px;
+}
+
+.menu-container > div {
+    background-color: rgba(255, 255, 255, 0.8);
+    text-align: center;
+    padding: 20px 0;
+    font-size: 30px;
+  }
+
+.menu {
+    grid-column: 1 / 3;
+}
+
+.eaten {
+    grid-column: 3 / 5;
+}
+
+.create{
+    grid-column: 5 / 8;
 }
