--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,39 +1,55 @@
-<h1>Meet Between Buns</h1>
+<div class="page-container">
+  
+  <div class="title">
+    <img src="/assets/images/logo.png" class="logo">
+  </div>
 
-<h2>Burgers waitin' to be eaten:</h2>
 
-<div class="container">
 
-<ul>
-{{#each burgers}}
-  {{#unless eaten}}
-    {{> burgers/burger-block eaten=true}}
-    {{/unless}}
-{{/each}}
-</ul>
-<h2>Burgers eaten:</h2>
+<div class="menu-container">
+  <div class="menu">
+    <h2>Burgers waitin' to be eaten:</h2>
+    <img src="/assets/images/burger-icon.png" class= "icon">
+    <ul class="items">
+    {{#each burgers}}
+      {{#unless eaten}}
+        {{> burgers/burger-block eaten=true}}
+      {{/unless}}
+    {{/each}}
+    </ul>
+  </div>
 
-<ul>
-{{#each burgers}}
-  {{#if eaten}}
-    {{> burgers/burger-block eaten=false}}
-  {{/if}}
-{{/each}}
-</ul>
-<h2>Create a Burger</h2>
-<form class="create-form">
+  <div class="eaten">
+    <h2>Burgers eaten:</h2>
 
-  <div class="form-group">
+    <ul class= "items">
+      {{#each burgers}}
+        {{#if eaten}}
+          {{> burgers/burger-block eaten=false}}
+        {{/if}}
+      {{/each}}
+    </ul>
+    <img src="assets/images/wimpy.png" class="wimpy">
+  </div>
+
+<div class= "create">
+    <h2>Create a Burger:</h2>
+  <form class="create-form">
+<img src="/assets/images/burger-icon.png" class= "icon">
+  <div class="form-group-name">
     <label for="burger">Burger Name:</label>
-    <input type="text" id="burger" name="name">
+    <input type="text" id="burger" name="name" placeholder="burger" class ="burger-input">
   </div>
 
   <div class="form-group">
     <label for="eaten">Eat now or save?</label><br>
-    <input type="radio" name="eaten" value="1" checked> Eat!<br>
-    <input type="radio" name="eaten" value="0"> Save for later
+    <input type="checkbox" name="eaten" value="1" checked="checked"><span class="checkmark"></span> Eat!<br>
+    <input type="checkbox" name="eaten" value="0"><span class="checkmark"></span> Save for later
   </div>
 
-  <button type="submit">Create Burger</button>
-</form>
+    <button type="submit" class="btn">Create Burger</button>
+  </form>
+  </div>
+    </div>
+  </div>
 </div>
