--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-		<link rel="stylesheet" href="/assets/css/burger_style.css" type="text/css" />
+		<link rel="stylesheet" href="/assets/css/burger_style.css" type="text/css"/>
+		<link href="https://fonts.googleapis.com/css?family=Black+Han+Sans|Sigmar+One&display=swap" rel="stylesheet">
 		<title>Meet Between Buns</title>
 		<script src="https://code.jquery.com/jquery.js"></script>
 		<script src="/assets/js/burgers.js"></script>
