--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -43,8 +43,11 @@
 
   <div class="form-group">
     <label for="eaten">Eat now or save?</label><br>
-    <input type="checkbox" name="eaten" value="1" checked="checked"><span class="checkmark"></span> Eat!<br>
-    <input type="checkbox" name="eaten" value="0"><span class="checkmark"></span> Save for later
+    <label class="input-style">Eat!  
+      <input type="checkbox" name="eaten" value="1" checked="checked"><span class="checkmark"></span> </label><br>
+      <label class="input-style"> Save for later   
+    <input class="input-style" type="checkbox" name="eaten" value="0"><span class="checkmark"></span>
+    </label>
   </div>
 
     <button type="submit" class="btn">Create Burger</button>
