--- a/public/assets/css/burger_style.css
+++ b/public/assets/css/burger_style.css
@@ -42,7 +42,7 @@ h2{
     
         width: 200;
         height: 55px;
-        padding: 12px 20px;
+        padding: 5px;
         box-sizing: border-box;
         border: 2px solid #ccc;
         border-radius: 4px;
@@ -52,6 +52,73 @@ h2{
       
 }
 
+/* The container */
+.input-style {
+    display: block;
+    position: relative;
+    padding: 1px;
+    margin-bottom: 12px;
+    cursor: pointer;
+    font-size: 22px;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+  }
+  
+  /* Hide the browser's default checkbox */
+  .input-style input {
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+    height: 0;
+    width: 0;
+  }
+  
+  /* Create a custom checkbox */
+  .checkmark {
+    position: absolute;
+    top: 0;
+    left: 25;
+    height: 25px;
+    width: 25px;
+    background-color:rgba(162, 162, 162);
+  }
+  
+  /* On mouse-over, add a grey background color */
+  .input-style:hover input ~ .checkmark {
+    background-color: rgba(149,149,149);
+  }
+  
+  /* When the checkbox is checked, add a blue background */
+  .input-style input:checked ~ .checkmark {
+    background-color: rgba(149,149,149);
+  }
+  
+  /* Create the checkmark/indicator (hidden when not checked) */
+  .checkmark:after {
+    content: "";
+    position: absolute;
+    display: none;
+  }
+  
+  /* Show the checkmark when checked */
+  .input-style input:checked ~ .checkmark:after {
+    display: block;
+  }
+  
+  /* Style the checkmark/indicator */
+  .input-style .checkmark:after {
+    left: 9px;
+    top: 5px;
+    width: 5px;
+    height: 10px;
+    border: solid white;
+    border-width: 0 3px 3px 0;
+    -webkit-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    transform: rotate(45deg);
+  }
 .menu-container {
     display: grid;
     background: rgba(187, 187, 187, 0.6);
