--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<link rel="icon" href="/assets/images/burger-icon.png">
 		<link rel="stylesheet" href="/assets/css/burger_style.css" type="text/css"/>
 		<link href="https://fonts.googleapis.com/css?family=Black+Han+Sans|Sigmar+One&display=swap" rel="stylesheet">
 		<title>Meet Between Buns</title>
@@ -11,4 +12,5 @@
 	<body>
 		{{{ body }}}
 	</body>
+
 </html>
