--- a/views/partials/burgers/burger-block.handlebars
+++ b/views/partials/burgers/burger-block.handlebars
@@ -2,7 +2,7 @@
 	{{name}}
 
 	<button class=" btn change-eaten" data-id="{{id}}" data-neweaten="{{eaten}}">
-		{{#if eaten}}Eat!{{else}}Save for later{{/if}}
+		{{#if eaten}}Eat!{{else}}make another!{{/if}}
 	</button>
 
 	<button class="btn delete-burger" data-id="{{this.id}}">DELETE!</button>
