--- a/public/assets/css/burger_style.css
+++ b/public/assets/css/burger_style.css
@@ -170,3 +170,19 @@ h2{
     width: 100%;
     font-size: 16px;
 }
+
+@media screen and (max-width: 600px) {
+  body,
+  html {
+    background-image: url("/assets/image/backgroun.jpg");
+    height: 100%;
+    margin: 0px;
+    background-position: center;
+    background-repeat: repeat;
+    background-size: auto;
+  }
+
+  .menu-container {
+    margin: 35px;
+  }
+}
